--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {
 
 #rankingBox{
   position:absolute;
-  top:22%;
+  top:5%;
   left:8%;
   width:220px;
   font-size:16px;
@@ -76,13 +76,28 @@ body, html {
 <script>
 const {Engine, Render, Runner, World, Bodies, Body, Events} = Matter;
 
-const engine = Engine.create();
-engine.world.gravity.y = 1;
-const world = engine.world;
+// 判定：スマホかPCか
+const isMobile = window.innerWidth <= 768;
 
+// 画面サイズ
 const width = window.innerWidth;
 const height = window.innerHeight;
 
+// 容器サイズと位置を分ける
+const containerWidth  = isMobile ? 350 : 420;
+const containerHeight = isMobile ? 480 : 520;
+const wallThickness   = 10;
+const centerX         = width / 2;
+const bottomY         = isMobile ? height * 0.85 : height * 0.9;
+
+// Matter.js エンジン
+const engine = Engine.create();
+engine.world.gravity.y = 1;
+engine.positionIterations = 10; // 衝突精度アップ
+engine.velocityIterations = 10;
+const world = engine.world;
+
+// レンダラー
 const render = Render.create({
   element: document.body,
   engine: engine,
@@ -93,7 +108,6 @@ const render = Render.create({
     background:"transparent"
   }
 });
-
 Render.run(render);
 Runner.run(Runner.create(), engine);
 
@@ -101,41 +115,14 @@ Runner.run(Runner.create(), engine);
 // 容器
 //////////////////////////////////////////////////
 
-const containerWidth = 420;
-const containerHeight = 520;
-const wallThickness = 10;
-
-const centerX = width/2;
-const bottomY = height*0.9;
-
-const leftWall = Bodies.rectangle(
-  centerX - containerWidth/2,
-  bottomY - containerHeight/2,
-  wallThickness,
-  containerHeight,
-  { isStatic:true, render:{fillStyle:"#000"} }
-);
-
-const rightWall = Bodies.rectangle(
-  centerX + containerWidth/2,
-  bottomY - containerHeight/2,
-  wallThickness,
-  containerHeight,
-  { isStatic:true, render:{fillStyle:"#000"} }
-);
-
-const floor = Bodies.rectangle(
-  centerX,
-  bottomY,
-  containerWidth,
-  wallThickness,
-  { isStatic:true, render:{fillStyle:"#000"} }
-);
+const leftWall = Bodies.rectangle(centerX - containerWidth/2, bottomY - containerHeight/2, wallThickness, containerHeight, {isStatic:true, render:{fillStyle:"#000"}});
+const rightWall = Bodies.rectangle(centerX + containerWidth/2, bottomY - containerHeight/2, wallThickness, containerHeight, {isStatic:true, render:{fillStyle:"#000"}});
+const floor = Bodies.rectangle(centerX, bottomY, containerWidth, wallThickness, {isStatic:true, render:{fillStyle:"#000"}});
 
 World.add(world,[leftWall,rightWall,floor]);
 
 //////////////////////////////////////////////////
-// 🐶 サイズ別 犬画像
+// 🐶 犬画像・サイズ
 //////////////////////////////////////////////////
 
 const dogImages = [
@@ -149,7 +136,6 @@ const dogImages = [
   "images/inugame_size8.png",
   "images/inugame_size9.png"
 ];
-
 const sizes = [18,26,36,48,62,78,100,125,160];
 
 //////////////////////////////////////////////////
@@ -160,31 +146,30 @@ let currentBall = null;
 let score = 0;
 let highScore = localStorage.getItem("highScore") || 0;
 let isGameOver = false;
-
 document.getElementById("highScore").innerText = highScore;
 
 //////////////////////////////////////////////////
-// ボール生成
+// ボール生成関数
 //////////////////////////////////////////////////
 
-function createBall(sizeIndex, x, y, isStatic = false){
+function createBall(sizeIndex, x, y, isStatic=false){
   const radius = sizes[sizeIndex];
   const texturePath = dogImages[sizeIndex];
 
+  // サイズに応じて密度調整（小さいボールほど少し重くする）
+  const density = sizeIndex === 0 ? 0.003 : 0.0015;
+
   const ball = Bodies.circle(x, y, radius, {
-    restitution: 0.15,
-    friction: 0.2,
-    density: 0.0015,
-    isStatic: isStatic,
-    render: {
-      sprite: {
-        texture: texturePath,
-        xScale: 1,
-        yScale: 1
-      }
+    restitution:0.15,
+    friction:0.2,
+    density:density,
+    isStatic:isStatic,
+    render:{
+      sprite:{ texture: texturePath, xScale:1, yScale:1 }
     }
   });
 
+  // 元画像の比率に合わせてスケール
   const img = new Image();
   img.src = texturePath;
   img.onload = function(){
@@ -198,54 +183,39 @@ function createBall(sizeIndex, x, y, isStatic = false){
 }
 
 //////////////////////////////////////////////////
-// スポーン
+// ボールスポーン
 //////////////////////////////////////////////////
 
 function spawnBall(){
   if(isGameOver) return;
   const sizeIndex = Math.floor(Math.random()*3);
-  currentBall = createBall(sizeIndex, centerX, 80, true);
+  // スマホ版は落下位置を少し低く、PC版は従来通り
+  const startY = isMobile ? 60 : 80;
+  currentBall = createBall(sizeIndex, centerX, startY, true);
   World.add(world,currentBall);
 }
 
 spawnBall();
 
 //////////////////////////////////////////////////
-// マウス & タッチ操作
+// マウス・タッチ操作
 //////////////////////////////////////////////////
 
 function moveBall(clientX){
   if(!currentBall || isGameOver) return;
-  const x = Math.max(
-    centerX - containerWidth/2 + 20,
-    Math.min(clientX, centerX + containerWidth/2 - 20)
-  );
-  Body.setPosition(currentBall,{x:x,y:80});
+  const x = Math.max(centerX - containerWidth/2 + 20, Math.min(clientX, centerX + containerWidth/2 - 20));
+  Body.setPosition(currentBall,{x:x,y:isMobile?60:80});
 }
+window.addEventListener("mousemove", e => moveBall(e.clientX));
+window.addEventListener("touchmove", e => { if(e.touches.length>0) moveBall(e.touches[0].clientX); });
 
-// マウス移動
-window.addEventListener("mousemove", e => {
-  moveBall(e.clientX);
-});
-
-// タッチ移動
-window.addEventListener("touchmove", e => {
-  if(e.touches.length > 0){
-    moveBall(e.touches[0].clientX);
-  }
-});
-
-// 投げる
 function shootBall(){
   if(isGameOver || !currentBall) return;
   Body.setStatic(currentBall,false);
   currentBall = null;
   setTimeout(spawnBall,350);
 }
-
-// マウスクリック
 window.addEventListener("click", shootBall);
-// タップ
 window.addEventListener("touchstart", shootBall);
 
 //////////////////////////////////////////////////
@@ -256,40 +226,25 @@ Events.on(engine,"collisionStart",event=>{
   event.pairs.forEach(pair=>{
     const a = pair.bodyA;
     const b = pair.bodyB;
+    if(a.sizeIndex!==undefined && b.sizeIndex!==undefined && a!==currentBall && b!==currentBall && a.sizeIndex===b.sizeIndex){
+      const newSize = (a.sizeIndex < sizes.length-1) ? a.sizeIndex+1 : sizes.length-1;
+      const newBall = createBall(
+        newSize,
+        (a.position.x+b.position.x)/2,
+        (a.position.y+b.position.y)/2
+      );
+      World.remove(world,a);
+      World.remove(world,b);
+      World.add(world,newBall);
 
-    if(a.sizeIndex !== undefined &&
-       b.sizeIndex !== undefined &&
-       a !== currentBall &&
-       b !== currentBall &&
-       a.sizeIndex === b.sizeIndex){
+      score += (newSize+1)*5;
+      document.getElementById("score").innerText = score;
 
-        if(a.sizeIndex < sizes.length-1){
-          const newSize = a.sizeIndex + 1;
-
-          const newBall = createBall(
-            newSize,
-            (a.position.x + b.position.x)/2,
-            (a.position.y + b.position.y)/2
-          );
-
-          World.remove(world,a);
-          World.remove(world,b);
-          World.add(world,newBall);
-
-          score += (newSize+1)*5;
-        } else {
-          World.remove(world,a);
-          World.remove(world,b);
-          score += 500;
-        }
-
-        document.getElementById("score").innerText = score;
-
-        if(score > highScore){
-          highScore = score;
-          localStorage.setItem("highScore",highScore);
-          document.getElementById("highScore").innerText = highScore;
-        }
+      if(score>highScore){
+        highScore = score;
+        localStorage.setItem("highScore",highScore);
+        document.getElementById("highScore").innerText = highScore;
+      }
     }
   });
 });
@@ -300,9 +255,8 @@ Events.on(engine,"collisionStart",event=>{
 
 Events.on(engine,"afterUpdate",()=>{
   if(isGameOver) return;
-
   world.bodies.forEach(body=>{
-    if(body.sizeIndex !== undefined && body.position.y > height + 200){
+    if(body.sizeIndex!==undefined && body.position.y>height+200){
       gameOver();
     }
   });
@@ -311,7 +265,7 @@ Events.on(engine,"afterUpdate",()=>{
 function gameOver(){
   if(isGameOver) return;
   isGameOver = true;
-  document.getElementById("gameOver").style.display = "block";
+  document.getElementById("gameOver").style.display="block";
   updateRanking();
 }
 
@@ -320,18 +274,10 @@ function gameOver(){
 //////////////////////////////////////////////////
 
 document.getElementById("retryBtn").addEventListener("click",()=>{
-  world.bodies.slice().forEach(body=>{
-    if(body.sizeIndex !== undefined){
-      World.remove(world,body);
-    }
-  });
-
-  score = 0;
-  document.getElementById("score").innerText = 0;
-
-  isGameOver = false;
-  document.getElementById("gameOver").style.display = "none";
-
+  world.bodies.slice().forEach(body=>{ if(body.sizeIndex!==undefined) World.remove(world,body); });
+  score=0; document.getElementById("score").innerText=0;
+  isGameOver=false;
+  document.getElementById("gameOver").style.display="none";
   spawnBall();
 });
 
@@ -342,22 +288,17 @@ document.getElementById("retryBtn").addEventListener("click",()=>{
 function updateRanking(){
   const today = new Date().toISOString().slice(0,10);
   const key = "ranking_" + today;
-
-  let ranking = JSON.parse(localStorage.getItem(key) || "[]");
+  let ranking = JSON.parse(localStorage.getItem(key)||"[]");
   ranking.push(score);
   ranking.sort((a,b)=>b-a);
   ranking = ranking.slice(0,3);
   localStorage.setItem(key,JSON.stringify(ranking));
-
   const box = document.getElementById("ranking");
-  box.innerHTML = "";
-  ranking.forEach((s,i)=>{
-    box.innerHTML += `${i+1}位 : ${s}<br>`;
-  });
+  box.innerHTML="";
+  ranking.forEach((s,i)=>{ box.innerHTML += `${i+1}位 : ${s}<br>`; });
 }
 
 updateRanking();
-
 </script>
 </body>
 </html>
