--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body, html {
 <script>
 const {Engine, Render, Runner, World, Bodies, Body, Events} = Matter;
 
-// スマホ判定（UserAgentで確実に）
+// スマホ判定（UserAgent）
 const isMobile = /Mobi|Android/i.test(navigator.userAgent);
 
 // 画面サイズ
@@ -85,12 +85,11 @@ const width = window.innerWidth;
 const height = window.innerHeight;
 
 // 容器サイズと位置
-const containerWidth  = isMobile ? 550 : 420;  // スマホは大きく
-const containerHeight = isMobile ? 700 : 520;  // スマホは大きく
+const containerWidth  = isMobile ? 650 : 420;  // スマホ版はさらに大きく
+const containerHeight = isMobile ? 800 : 520;  // スマホ版はさらに大きく
 const wallThickness   = 10;
 const centerX         = width / 2;
-// PC版は底を少し下げ、スマホ版はそのまま
-const bottomY         = isMobile ? height * 0.85 : height * 0.92;
+const bottomY         = isMobile ? height * 0.85 : height * 0.92; // PC版は少し下げる
 
 // Matter.js エンジン
 const engine = Engine.create();
@@ -139,7 +138,8 @@ const dogImages = [
 ];
 
 const baseSizes = [18,26,36,48,62,78,100,125,160];
-const sizes = isMobile ? baseSizes.map(s=>Math.round(s*1.6)) : baseSizes;
+// スマホ版はぱっと見で大きいサイズに1.8倍
+const sizes = isMobile ? baseSizes.map(s=>Math.round(s*1.8)) : baseSizes;
 
 //////////////////////////////////////////////////
 // ゲーム変数
@@ -158,7 +158,7 @@ document.getElementById("highScore").innerText = highScore;
 function createBall(sizeIndex, x, y, isStatic=false){
   const radius = sizes[sizeIndex];
   const texturePath = dogImages[sizeIndex];
-  const density = sizeIndex===0 ? (isMobile?0.008:0.003) : 0.0018;
+  const density = sizeIndex===0 ? (isMobile?0.01:0.003) : 0.002;
 
   const ball = Bodies.circle(x,y,radius,{
     restitution:0.15,
@@ -187,7 +187,8 @@ function createBall(sizeIndex, x, y, isStatic=false){
 function spawnBall(){
   if(isGameOver) return;
   const sizeIndex = Math.floor(Math.random()*3);
-  const startY = isMobile ? bottomY - containerHeight + sizes[sizeIndex] + 30 : 60; // PC版は少し上
+  // PC版は投下位置を高く、スマホ版は容器上から30px
+  const startY = isMobile ? bottomY - containerHeight + sizes[sizeIndex] + 30 : 30;
   currentBall = createBall(sizeIndex, centerX, startY, true);
   World.add(world,currentBall);
 }
