--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>しばいぬゲーム 🐶</title>
+<title>犬スイカゲーム 🐶</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 
@@ -77,7 +77,7 @@ body, html {
 <script>
 const {Engine, Render, Runner, World, Bodies, Body, Events} = Matter;
 
-// スマホ判定（UserAgent）
+// スマホ判定
 const isMobile = /Mobi|Android/i.test(navigator.userAgent);
 
 // 画面サイズ
@@ -85,8 +85,8 @@ const width = window.innerWidth;
 const height = window.innerHeight;
 
 // 容器サイズと位置
-const containerWidth  = isMobile ? 550 : 420;  // スマホは大きめ
-const containerHeight = isMobile ? 700 : 520;  // スマホは大きめ
+const containerWidth  = isMobile ? 450 : 420;  // スマホ版少し大きめ
+const containerHeight = isMobile ? 580 : 520;  // スマホ版少し大きめ
 const wallThickness   = 10;
 const centerX         = width / 2;
 const bottomY         = isMobile ? height * 0.85 : height * 0.92; // PC版少し下げ
@@ -138,8 +138,8 @@ const dogImages = [
 ];
 
 const baseSizes = [18,26,36,48,62,78,100,125,160];
-// スマホ版は1.5倍に縮小
-const sizes = isMobile ? baseSizes.map(s=>Math.round(s*1.5)) : baseSizes;
+// スマホ版は1.2倍に縮小
+const sizes = isMobile ? baseSizes.map(s=>Math.round(s*1.2)) : baseSizes;
 
 //////////////////////////////////////////////////
 // ゲーム変数
@@ -158,7 +158,7 @@ document.getElementById("highScore").innerText = highScore;
 function createBall(sizeIndex, x, y, isStatic=false){
   const radius = sizes[sizeIndex];
   const texturePath = dogImages[sizeIndex];
-  const density = sizeIndex===0 ? (isMobile?0.008:0.003) : 0.002;
+  const density = sizeIndex===0 ? (isMobile?0.006:0.003) : 0.002;
 
   const ball = Bodies.circle(x,y,radius,{
     restitution:0.15,
@@ -187,7 +187,7 @@ function createBall(sizeIndex, x, y, isStatic=false){
 function spawnBall(){
   if(isGameOver) return;
   const sizeIndex = Math.floor(Math.random()*3);
-  const startY = isMobile ? bottomY - containerHeight + sizes[sizeIndex] + 30 : 30; // PCは高く、スマホは容器上から30px
+  const startY = isMobile ? bottomY - containerHeight + sizes[sizeIndex] + 30 : 30; // PCは高く
   currentBall = createBall(sizeIndex, centerX, startY, true);
   World.add(world,currentBall);
 }
@@ -295,7 +295,7 @@ document.getElementById("retryBtn").addEventListener("click",()=>{
 });
 
 //////////////////////////////////////////////////
-// ランキング
+// ランキング　
 //////////////////////////////////////////////////
 
 function updateRanking(){
