--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>しばいぬゲーム 🐶</title>
+<title>犬スイカゲーム 🐶</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 
@@ -21,6 +21,7 @@ body, html {
   top:22%;
   right:8%;
   font-size:20px;
+  z-index:10;
 }
 
 #rankingBox{
@@ -30,6 +31,7 @@ body, html {
   width:220px;
   font-size:16px;
   line-height:1.6em;
+  z-index:10;
 }
 
 #gameOver{
@@ -39,6 +41,7 @@ body, html {
   transform:translate(-50%,-50%);
   text-align:center;
   display:none;
+  z-index:20;
 }
 
 #gameOver h1{
@@ -84,12 +87,16 @@ const isMobile = /Mobi|Android/i.test(navigator.userAgent);
 const width = window.innerWidth;
 const height = window.innerHeight;
 
-// 容器サイズと位置（画面サイズに合わせて調整）
-const containerWidth  = isMobile ? Math.min(width * 0.8, 400) : 420;
-const containerHeight = isMobile ? Math.min(height * 0.6, 600) : 520;
-const wallThickness   = 10;
-const centerX         = width / 2;
-const bottomY         = isMobile ? height - 60 : height * 0.92; // 底から少し上に
+// 容器サイズ・位置
+const containerWidth  = isMobile ? Math.min(width*0.85, 400) : 420;
+const containerHeight = isMobile ? Math.min(height*0.5, 500) : 520;
+
+// 上端と下端を画面内に収める
+const containerTopY = isMobile ? 60 : height*0.1;
+const bottomY = containerTopY + containerHeight;
+
+const wallThickness = 10;
+const centerX = width/2;
 
 // Matter.js エンジン
 const engine = Engine.create();
@@ -116,8 +123,8 @@ Runner.run(Runner.create(), engine);
 // 容器
 //////////////////////////////////////////////////
 
-const leftWall = Bodies.rectangle(centerX - containerWidth/2, bottomY - containerHeight/2, wallThickness, containerHeight, {isStatic:true, render:{fillStyle:"#000"}});
-const rightWall = Bodies.rectangle(centerX + containerWidth/2, bottomY - containerHeight/2, wallThickness, containerHeight, {isStatic:true, render:{fillStyle:"#000"}});
+const leftWall = Bodies.rectangle(centerX - containerWidth/2, containerTopY + containerHeight/2, wallThickness, containerHeight, {isStatic:true, render:{fillStyle:"#000"}});
+const rightWall = Bodies.rectangle(centerX + containerWidth/2, containerTopY + containerHeight/2, wallThickness, containerHeight, {isStatic:true, render:{fillStyle:"#000"}});
 const floor = Bodies.rectangle(centerX, bottomY, containerWidth, wallThickness, {isStatic:true, render:{fillStyle:"#000"}});
 World.add(world,[leftWall,rightWall,floor]);
 
@@ -138,9 +145,9 @@ const dogImages = [
 ];
 
 const baseSizes = [18,26,36,48,62,78,100,125,160];
-// スマホ版は容器サイズに合わせて少し大きめ（倍率 1.1～1.2）
-const sizeMultiplier = isMobile ? Math.min(containerHeight/600, 1.2) : 1;
-const sizes = baseSizes.map(s => Math.round(s * sizeMultiplier));
+// スマホ版は容器サイズに合わせて倍率調整
+const sizeMultiplier = isMobile ? Math.min(containerHeight/500, 1.2) : 1;
+const sizes = baseSizes.map(s=>Math.round(s*sizeMultiplier));
 
 //////////////////////////////////////////////////
 // ゲーム変数
@@ -188,8 +195,7 @@ function createBall(sizeIndex, x, y, isStatic=false){
 function spawnBall(){
   if(isGameOver) return;
   const sizeIndex = Math.floor(Math.random()*3);
-  // ボールの開始位置：容器上端の少し上に
-  const startY = bottomY - containerHeight - sizes[sizeIndex] - 10;
+  const startY = containerTopY - sizes[sizeIndex] - 10; // 容器上端の少し上に
   currentBall = createBall(sizeIndex, centerX, startY, true);
   World.add(world,currentBall);
 }
@@ -209,15 +215,19 @@ function moveBall(clientX){
 window.addEventListener("mousemove", e => moveBall(e.clientX));
 window.addEventListener("click", shootBall);
 
+// タッチ操作（ゲーム領域のみ）
 window.addEventListener("touchstart", e => {
+  if(e.target.id==="retryBtn") return; // ボタンは無視
   if(e.touches.length>0) moveBall(e.touches[0].clientX);
   e.preventDefault();
 });
 window.addEventListener("touchmove", e => {
+  if(e.target.id==="retryBtn") return;
   if(e.touches.length>0) moveBall(e.touches[0].clientX);
   e.preventDefault();
 });
 window.addEventListener("touchend", e => {
+  if(e.target.id==="retryBtn") return;
   shootBall();
   e.preventDefault();
 });
@@ -288,7 +298,8 @@ function gameOver(){
 // リトライ
 //////////////////////////////////////////////////
 
-document.getElementById("retryBtn").addEventListener("click",()=>{
+document.getElementById("retryBtn").addEventListener("click", e=>{
+  e.stopPropagation(); // touchstart preventDefaultを回避
   world.bodies.slice().forEach(body=>{if(body.sizeIndex!==undefined)World.remove(world,body);});
   score=0; document.getElementById("score").innerText=0;
   isGameOver=false;
