--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>犬スイカゲーム 🐶</title>
+<title>いぬいぬゲーム 🐶</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 
@@ -87,12 +87,12 @@ const isMobile = /Mobi|Android/i.test(navigator.userAgent);
 const width = window.innerWidth;
 const height = window.innerHeight;
 
-// 容器サイズ・位置
-const containerWidth  = isMobile ? Math.min(width*0.85, 400) : 420;
-const containerHeight = isMobile ? Math.min(height*0.5, 500) : 520;
+// 容器サイズ・位置（思い切って大きく）
+const containerWidth  = isMobile ? Math.min(width*0.9, 420) : 420;
+const containerHeight = isMobile ? Math.min(height*0.6, 600) : 520;
 
-// 上端と下端を画面内に収める
-const containerTopY = isMobile ? 60 : height*0.1;
+// 容器上端・下端
+const containerTopY = isMobile ? 20 : height*0.1;
 const bottomY = containerTopY + containerHeight;
 
 const wallThickness = 10;
@@ -145,8 +145,8 @@ const dogImages = [
 ];
 
 const baseSizes = [18,26,36,48,62,78,100,125,160];
-// スマホ版は容器サイズに合わせて倍率調整
-const sizeMultiplier = isMobile ? Math.min(containerHeight/500, 1.2) : 1;
+// 思い切ってスマホ版は1.2倍
+const sizeMultiplier = isMobile ? 1.2 : 1;
 const sizes = baseSizes.map(s=>Math.round(s*sizeMultiplier));
 
 //////////////////////////////////////////////////
@@ -195,7 +195,7 @@ function createBall(sizeIndex, x, y, isStatic=false){
 function spawnBall(){
   if(isGameOver) return;
   const sizeIndex = Math.floor(Math.random()*3);
-  const startY = containerTopY - sizes[sizeIndex] - 10; // 容器上端の少し上に
+  const startY = containerTopY - sizes[sizeIndex] - 10; // 容器上端の少し上
   currentBall = createBall(sizeIndex, centerX, startY, true);
   World.add(world,currentBall);
 }
@@ -215,9 +215,8 @@ function moveBall(clientX){
 window.addEventListener("mousemove", e => moveBall(e.clientX));
 window.addEventListener("click", shootBall);
 
-// タッチ操作（ゲーム領域のみ）
 window.addEventListener("touchstart", e => {
-  if(e.target.id==="retryBtn") return; // ボタンは無視
+  if(e.target.id==="retryBtn") return;
   if(e.touches.length>0) moveBall(e.touches[0].clientX);
   e.preventDefault();
 });
